# otus_cpp_lessons

./: Makefile  README.md  cpp_core_guidelines.txt  examples_constexpr.cpp  examples_decltype_1.cpp  examples_lambda_closure.cpp  examples_operator_.cpp  examples_unique_ptr_deleter.cpp  examples_using.cpp  xray.h
asio/: CMakeLists.txt  asiohiper.cpp  resolver.cpp  sync_client.cpp  sync_server.cpp
async/: async.cpp  async.h  main.cpp
boost/: factory.cpp  prj_boost.files  signal_slot_example.cpp
db/: example_tables.txt
examples/: Makefile  auto.cpp  example_template.cpp  final.cpp  logging_allocator.cpp  parameter_pack.cpp  parameter_pack_1.cpp  parameter_pack_2.cpp  prj_examples.files  tuple.cpp  unique_ptr_deleter.h  xray.h
gof/: bridge.cpp  current.files  decorator.cpp  flyweight.cpp  prj_gof.files  proxy.cpp
network_examples/: CMakeLists.txt  json.cpp
